# SilvaTest

./: .gitignore  .replit  activar_ia.py  ask_agent.py  backup.sql  create_db.py  diagnostico.py  ingest_data.py  main.py  make_admin.py  planes.xlsx  populate_plans.py  pyproject.toml  requirements.old.txt  requirements.txt  start.sh
mi_app/: __init__.py  ask_agent.py  email_utils.py  forms.py  models.py  rag_agent.py  send_summary.py  site.db  site_viejo.db  utils.py
mi_app/routes/: __init__.py  admin_routes.py  ask_agent.py  auth_routes.py  main_routes.py
mi_app/static/: manifest.json  sw.js
mi_app/templates/: agente_ia.html  base.html  bloque_detalle.html  convocatoria_detalle.html  cuenta.html  detalle_tema.html  elegir_objetivo.html  elegir_plan.html  favoritas.html  generador_simulacro.html  hacer_test.html  home.html  login.html  offline.html  panel_fisico.html  politica_privacidad.html  prueba.html  registro.html  repaso_global_test.html  repaso_test.html  reset_password.html  resultado_test.html  terminos_condiciones.html  test.html
migrations/versions/: 015876a07a33_añadir_clave_primaria_a_la_tabla_nota.py  0aff06b029c4_anadir_es_publica_a_convocatoria.py  0d03e4b45767_añadir_campo_es_premium_a_convocatoria.py  2435308ff33a_anadir_tabla_de_acceso_con_fecha_de_.py  2cb258bb54b5_añadir_campo_de_tokens_para_ia.py  35cc2f0c3f3d_añadir_preferencias_de_dashboard_a_.py  3f488cb7b8c9_añade_tabla_y_relacion_para_favoritos.py  507abaed92ae_añadir_columna_posicion_a_bloque.py  567b8323474a_creacion_inicial_de_la_base_de_datos.py  (+20 more)
tests/: test_models.py
(+25 files in other folders)
